# PathModel3D

./: README.md  pyproject.toml  requirements2.txt  todo.org  visualization.py
data/: #ShapeDataset.py#  #augmentation.py#  .augmentation.py.swp  .data_utils.py.swp  ShapeDataset.py  ShapeDataset.py~  augmentation.py  augmentation.py.save  augmentation.py~  data_utils.py  test_dataset.py  test_dataset.py~  visualitation.py~  visualization.py
data/augmented_data/: #visualitation.py#  augmented_circle.npy  augmented_cone.npy  augmented_cube.npy  augmented_cylinder.npy  augmented_grid.npy  augmented_ico_sphere.npy  augmented_monkey.npy  augmented_plane.npy  augmented_torus.npy  augmented_uv_sphere.npy
data/blender_primitives_np/: cube.npy  grid.npy  monkey.npy
data/primitives/: circle.npy  cone.npy  cylinder.npy  ico_sphere.npy  plane.npy  torus.npy  uv_sphere.npy
src/: #%2APython%2A#ix2JjS#  #augment.py#  #nn.py#  .#augment.py  .nn.py.swp  .train.py.swp  .training.py.swp  PointNet.py  PointNet.py~  __init__.py  evaluate_model.py  multiple.py  nn.py  nn.py~  nn_mdn.py  run_and_export.py  squar_circle.csv  textEncoders.py  train.py  train.py.save  train.py~  training.py  training.py~  trajectory.csv
src/in_development_phase/: #mdn.py#  .#mdn.py  TextEncoder_testing.py  dgcnn_wrapper.py  nn.py~  nn_emb.py  nn_mdn.py  nn_mdn_with_wirh_workspace_encoder.py  nn_mdn_with_wirh_workspace_encoder.py~  train_emb.py  train_mdn.py
