[project]
name = "langpath3d"
version = "0.1.0"
description = "This project will be able to generate trajectories for visualization of objects"
authors = [
    {name = "AntonioSkara132",email = "conio1240@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
